adding csv dump and figsave to data folder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,14 @@ requires-python = ">=3.10"
 dependencies = [
     "pymmcore-plus[cli]",
     "rich",
+    "pandas",
+    "matplotlib",
+    "scikit-image",
+    "tifffile",
+    "seaborn",
+    "tqdm",
+    "openpyxl",
+    "pytest",
 ]
 
 [project.scripts]
